--- a/LandLystAsp.net/LandLyst/Booking/Booking.Master
+++ b/LandLystAsp.net/LandLyst/Booking/Booking.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="LandLyst.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Booking.Master.cs" Inherits="LandLyst.SiteMaster" %>
 
 <!DOCTYPE html>
 
@@ -14,7 +14,7 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="Content/style.css" rel="stylesheet" />
+    <link href="~/Content/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" />
 
 </head>
