--- a/LandLystAsp.net/LandLyst/Content/style.css
+++ b/LandLystAsp.net/LandLyst/Content/style.css
@@ -37,9 +37,31 @@
     min-width:150px;
    
 }
-.informationBox text{
-    
+
+.roomCard {
+    width: 90%;
+    margin: 0 20px;
+    margin-top: 40px;
+    text-align: center;
+    height: 120px;
+    overflow: hidden;
+    border-radius: 5px;
+    z-index: -1;
+    box-shadow: 0px 0px 20px -4px rgba(0, 0, 0, 1);
+    position:relative;
 }
+.roomCardImage {
+    width: 170px;
+    margin-right:100%;
+    position: relative;
+    overflow: hidden;
+}
+.roomCardInformation {
+    position:absolute;
+    top:0;
+    margin-left:200px;
+}
+
 
 
 
