--- a/LandLystAsp.net/LandLyst/Test/TestStyle.css
+++ b/LandLystAsp.net/LandLyst/Test/TestStyle.css
@@ -1,2 +1,65 @@
-﻿body {
+﻿
+/*CheckBox Design*/
+
+.InputContainer {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
+
+.InputContainer input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.InputContainer span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #C7DFFF;
+    border-radius: 2px;
+}
+
+.InputContainer:hover input ~ span {
+    background-color: #ABCCFF;
+}
+
+.InputContainer input:checked ~ span {
+    background-color:#578AFF;
+}
+
+.InputContainer span:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.InputContainer input:checked ~ span:after {
+    display:block;
+}
+
+.InputContainer span:after {
+      left: 9px;
+      top: 5px;
+      width: 5px;
+      height: 10px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+}
+
+/*CheckBox Design End*/
