--- a/LandLystAsp.net/LandLyst/Content/HeadsiteStyle.css
+++ b/LandLystAsp.net/LandLyst/Content/HeadsiteStyle.css
@@ -13,30 +13,32 @@
     top: -150px;
     height: 0px;
     width: 100%;
-    background-color: #000000a3;
+    background-color: #fff;
     z-index: 5;
     opacity: 0;
     transition: 1s;
+    box-shadow: 0px 0px 10px 0px black;
 }
 
-    .navBar div {
-        margin-top: 50px;
-        padding: 0px 100px;
-    }
+.navBar div {
+    margin-top: 50px;
+    padding: 0px 100px;
+}
 
-    .navBar a {
-        color: white;
-        font-size: 20px;
-        text-decoration: none;
-        padding: 0px 20px 0px 0px;
-    }
+.navBar a {
+    color: black;
+    font-size: 20px;
+    text-decoration: none;
+    padding: 0px 20px 0px 0px;
+}
 
-    .navBar i {
-        position: relative;
-        color: white;
-        font-size: 30px;
-        float: right;
-    }
+.navBar i {
+    position: relative;
+    color: black;
+    cursor: pointer;
+    font-size: 30px;
+    float: right;
+}
 
 .menuClass {
     position: absolute;
@@ -59,9 +61,9 @@
     top: 80%
 }
 
-    .bottomBar p {
-        margin: 0;
-    }
+.bottomBar p {
+    margin: 0;
+}
 
 .Middlebutton {
     position: relative;
@@ -73,24 +75,24 @@
     height: 150px;
     border-radius: 100px;
     box-shadow: 0px 0px 10px 0px black;
+    transition: 0.5s;
 }
 
-    .Middlebutton div {
-        width: 100%;
-        height: 100%;
-    }
+.Middlebutton:hover {
+    background-color: #dbe0e4;
+}
 
-    .Middlebutton a {
-        color: #212529;
-        text-decoration: none;
-    }
+.Middlebutton a {
+    color: #212529;
+    text-decoration: none;
+}
 
-    .Middlebutton p {
-        font-size: 25px;
-        padding: 33px 0px;
-        font-weight: 400;
-        text-align: center;
-    }
+.Middlebutton p {
+    font-size: 25px;
+    padding: 33px 0px;
+    font-weight: 400;
+    text-align: center;
+}
 
 .Header1 {
     position: relative;
