--- a/LandLystAsp.net/LandLyst/Content/style.css
+++ b/LandLystAsp.net/LandLyst/Content/style.css
@@ -1,29 +1,30 @@
 ﻿
-p{
-    font-size: 20px;
-}
+
 
 .checkButtonList {
-    margin:auto;
-}
-.checkButtonList input {
-    transform: scale(3);
-    margin: 15px 30% 0px;
-    color: white;
+    margin: auto;
 }
 
-.checkButtonList label {
-    /*margin-left: 25%;*/
-    margin-top: 15px;
-    /*margin-top:10px;*/
+    .checkButtonList input {
+        transform: scale(3);
+        margin: 15px 30% 0px;
+        color: white;
+    }
+
+    .checkButtonList label {
+        /*margin-left: 25%;*/
+        margin-top: 15px;
+        /*margin-top:10px;*/
+    }
+
+.calendar table {
+    margin: auto;
 }
 
-.calendar table{
-    margin:auto;
+.calendar h3 {
+    text-align: center;
 }
-.calendar h3{
-    text-align:center;
-}
+
 .row-center {
     margin: auto;
     max-width: 300px;
@@ -31,15 +32,14 @@ p{
 
 .informationBox {
     text-align: center;
-    
 }
-.informationBox input{
-    margin: auto;
-    width:70%;
-    height: 30%;
-    max-width: 70%;
-    min-width:150px;
-   
+
+.informationBox input {
+        margin: auto;
+        width: 70%;
+        height: 30%;
+        max-width: 70%;
+        min-width: 150px;
 }
 
 .roomCard {
@@ -50,24 +50,42 @@ p{
     height: 120px;
     overflow: hidden;
     border-radius: 5px;
-    z-index: -1;
+    z-index: 0;
     box-shadow: 0px 0px 20px -4px rgba(0, 0, 0, 1);
-    position:relative;
+    position: relative;
 }
+
 .roomCardImage {
     width: 170px;
-    margin-right:100%;
+    margin-right: 100%;
+    margin-left: -30px;
     position: relative;
     overflow: hidden;
 }
+
 .roomCardInformation {
-    position:absolute;
-    top:0;
-    margin-left:200px;
+    position: absolute;
+    top: 0;
+    margin-left: 150px;
     margin-top: 10px;
 }
 
-
-
-
-
+.roomCardInformation p {
+    font-size: 20px;
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    text-align:start;
+}
+.roomCardBTN {
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+}
+    .roomCardBTN button {
+        padding: 50px 50px 50px 50px;
+        border: none;
+        cursor: pointer;
+        background-color: #C7DFFF;
+        font-weight: 600;
+    }
