--- a/LandLystAsp.net/LandLyst/Content/style.css
+++ b/LandLystAsp.net/LandLyst/Content/style.css
@@ -34,14 +34,16 @@
     text-align: center;
 }
 
-.informationBox input {
+    .informationBox input {
         margin: auto;
         width: 70%;
         height: 30%;
         max-width: 70%;
         min-width: 150px;
-}
+    }
 
+
+/*Room Card Design*/
 .roomCard {
     width: 90%;
     margin: 0 20px;
@@ -53,6 +55,7 @@
     z-index: 0;
     box-shadow: 0px 0px 20px -4px rgba(0, 0, 0, 1);
     position: relative;
+    min-width: 340px;
 }
 
 .roomCardImage {
@@ -70,22 +73,99 @@
     margin-top: 10px;
 }
 
-.roomCardInformation p {
-    font-size: 20px;
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    text-align:start;
-}
+    .roomCardInformation p {
+        font-size: 20px;
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 900;
+        text-align: start;
+    }
+
 .roomCardBTN {
     position: absolute;
     top: 0;
     right: 0;
     text-align: center;
 }
+
     .roomCardBTN button {
-        padding: 50px 50px 50px 50px;
+        height: 120px;
+        width: 85px;
         border: none;
         cursor: pointer;
         background-color: #C7DFFF;
         font-weight: 600;
     }
+
+
+
+
+
+/*CheckBox Design*/
+
+.CheckBoxDiv{
+    margin-top: 25px;
+    text-align:center;
+}
+
+.InputContainer {
+    /*display: block;*/
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+    .InputContainer input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+    }
+
+    .InputContainer span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 25px;
+        width: 25px;
+        background-color: #C7DFFF;
+        border-radius: 2px;
+    }
+
+    .InputContainer:hover input ~ span {
+        background-color: #ABCCFF;
+    }
+
+    .InputContainer input:checked ~ span {
+        background-color: #578AFF;
+    }
+
+    .InputContainer span:after {
+        content: "";
+        position: absolute;
+        display: none;
+    }
+
+    .InputContainer input:checked ~ span:after {
+        display: block;
+    }
+
+    .InputContainer span:after {
+        left: 9px;
+        top: 7px;
+        width: 5px;
+        height: 10px;
+        border: solid white;
+        border-width: 0 3px 3px 0;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
+
+/*CheckBox Design End*/
