--- a/LandLystAsp.net/LandLyst/Content/style.css
+++ b/LandLystAsp.net/LandLyst/Content/style.css
@@ -1,5 +1,68 @@
-﻿
+﻿body {
+    min-height: 100%;
+    height: 100%;
+}
 
+.BgPic {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url(../Content/Image/Villa-20-bedroom-2.jpg);
+}
+
+.container-fluid {
+    position: absolute;
+    top: 130px;
+    background-color: #ffffffa1;
+    box-shadow: 0px 0px 10px 10px #ffffffa1;
+}
+
+.menuClass {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+}
+
+.menuButton {
+    position: relative;
+    border-radius: 0;
+    padding: 10px 40px;
+    font-size: 18px;
+}
+
+.navBar {
+    position: fixed;
+    display: block;
+    top: -150px;
+    height: 0px;
+    width: 100%;
+    background-color: #fff;
+    z-index: 5;
+    opacity: 0;
+    transition: 1s;
+    box-shadow: 0px 0px 10px 0px black;
+}
+
+    .navBar div {
+        margin-top: 50px;
+        padding: 0px 100px;
+    }
+
+    .navBar a {
+        color: black;
+        font-size: 20px;
+        text-decoration: none;
+        padding: 0px 20px 0px 0px;
+    }
+
+    .navBar i {
+        position: relative;
+        color: black;
+        cursor: pointer;
+        font-size: 30px;
+        float: right;
+    }
 
 .checkButtonList {
     margin: auto;
@@ -51,6 +114,7 @@
     margin-top: 40px;
     text-align: center;
     height: 120px;
+    background-color: white;
     overflow: hidden;
     border-radius: 5px;
     z-index: 0;
@@ -87,17 +151,23 @@
     position: absolute;
     top: 0;
     right: 0;
+    border-left: 1px solid black;
     text-align: center;
 }
 
-    .roomCardBTN button {
-        height: 120px;
-        width: 85px;
-        border: none;
-        cursor: pointer;
-        background-color: #C7DFFF;
-        font-weight: 600;
-    }
+.roomCardBTN button:hover {
+    background-color: #578AFF;
+}
+
+.roomCardBTN button {
+    height: 120px;
+    width: 85px;
+    border: none;
+    cursor: pointer;
+    background-color: #C7DFFF;
+    font-weight: 600;
+    transition: 0.5s;   
+}
 
 
 
@@ -139,6 +209,7 @@
         width: 25px;
         background-color: #C7DFFF;
         border-radius: 2px;
+        box-shadow: 0px 0px 1px 0px black;
     }
 
     .InputContainer:hover input ~ span {
