--- a/LandLystAsp.net/LandLyst/Content/style.css
+++ b/LandLystAsp.net/LandLyst/Content/style.css
@@ -109,6 +109,11 @@
     }
 
 
+.scrollmekanik {
+    overflow-y: scroll;
+    height: 660px;
+}
+
 /*Room Card Design*/
 .roomCard {
     width: 90%;
