--- a/LandLystAsp.net/LandLyst/Content/OrderStyle.css
+++ b/LandLystAsp.net/LandLyst/Content/OrderStyle.css
@@ -13,6 +13,25 @@
     box-shadow: 0px 0px 10px 10px #ffffffa1;
 }
 
+.RealBtn {
+    margin: 10px 10px 10px 0px;
+    border-radius: 0px;
+    box-shadow: black 0px 0px 0px 0px;
+}
+
+.headtitle {
+    position: relative;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 30px;
+    border: black solid 2px;
+    font-weight: 300;
+    color: black;
+    background-color: #ffffff80;
+}
+
 .BgPic {
     position: fixed;
     top: 0;
